added falling bird poo and splat bird poo
bird can poo, and poo need to hit something in the scene

--- a/BirdShooter/BirdShooter/BirdShooter.vcxproj.filters
+++ b/BirdShooter/BirdShooter/BirdShooter.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="src\Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\FallingBirdPoo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SplatBirdPoo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Engine.h">
@@ -81,6 +87,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FallingBirdPoo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\SplatBirdPoo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
