--- a/BirdShooter/BirdShooter/BirdShooter.vcxproj
+++ b/BirdShooter/BirdShooter/BirdShooter.vcxproj
@@ -163,6 +163,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\SplatBirdPoo.cpp" />
+    <ClCompile Include="src\FallingBirdPoo.cpp" />
     <ClCompile Include="src\BlueBird.cpp" />
     <ClCompile Include="src\Pigeon.cpp" />
     <ClCompile Include="src\AudioManager.cpp" />
@@ -174,6 +176,8 @@
     <ClCompile Include="src\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\SplatBirdPoo.h" />
+    <ClInclude Include="src\FallingBirdPoo.h" />
     <ClInclude Include="src\BlueBird.h" />
     <ClInclude Include="src\Pigeon.h" />
     <ClInclude Include="src\AudioManager.h" />
