abstracted the animation data from entity
entity data is now animation data in his own class file,
all animation data is in AnimationData
Entity has a member m_AnimationData now.

--- a/BirdShooter/BirdShooter/BirdShooter.vcxproj
+++ b/BirdShooter/BirdShooter/BirdShooter.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="src\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AnimationData.h" />
     <ClInclude Include="src\SplatBirdPoo.h" />
     <ClInclude Include="src\FallingBirdPoo.h" />
     <ClInclude Include="src\BlueBird.h" />
