--- a/BirdShooter/BirdShooter/BirdShooter.vcxproj
+++ b/BirdShooter/BirdShooter/BirdShooter.vcxproj
@@ -163,6 +163,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\AnimationManager.cpp" />
     <ClCompile Include="src\SplatBirdPoo.cpp" />
     <ClCompile Include="src\FallingBirdPoo.cpp" />
     <ClCompile Include="src\BlueBird.cpp" />
@@ -176,6 +177,7 @@
     <ClCompile Include="src\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AnimationManager.h" />
     <ClInclude Include="src\AnimationData.h" />
     <ClInclude Include="src\SplatBirdPoo.h" />
     <ClInclude Include="src\FallingBirdPoo.h" />
