--- a/BirdShooter/BirdShooter/BirdShooter.vcxproj
+++ b/BirdShooter/BirdShooter/BirdShooter.vcxproj
@@ -165,7 +165,7 @@
   <ItemGroup>
     <ClCompile Include="src\AnimationManager.cpp" />
     <ClCompile Include="src\SplatBirdPoo.cpp" />
-    <ClCompile Include="src\FallingBirdPoo.cpp" />
+    <ClCompile Include="src\BirdPoo.cpp" />
     <ClCompile Include="src\BlueBird.cpp" />
     <ClCompile Include="src\Pigeon.cpp" />
     <ClCompile Include="src\AudioManager.cpp" />
@@ -180,7 +180,7 @@
     <ClInclude Include="src\AnimationManager.h" />
     <ClInclude Include="src\AnimationData.h" />
     <ClInclude Include="src\SplatBirdPoo.h" />
-    <ClInclude Include="src\FallingBirdPoo.h" />
+    <ClInclude Include="src\BirdPoo.h" />
     <ClInclude Include="src\BlueBird.h" />
     <ClInclude Include="src\Pigeon.h" />
     <ClInclude Include="src\AudioManager.h" />
